--- a/index.html
+++ b/index.html
@@ -156,33 +156,12 @@ CLrcQLAJASuZZGgSqh7QJ45iAgA7">
                         <div class="table-responsive">
                             <table class="table table-hover">
                                 <tbody>
-                                <tr>
-                                    <td>Minecraft Ver.</td>
-                                    <td colspan="2">1.8.0</td>
-                                </tr>
-                                <tr>
-                                    <td>Require Mods</td>
-                                    <td colspan="2"><a href="https://files.minecraftforge.net/" target="_blank">Minecraft
-                                        Forge</a></td>
-                                </tr>
-                                <tr>
-                                    <td rowspan="2">License</td>
-                                    <td>Sources</td>
-                                    <td><a href="https://mozilla.org/MPL/2.0/" target="_blank">Mozilla Public License
-                                        2.0</a>.
-                                    </td>
-                                <tr>
-                                    <td>Images</td>
-                                    <td><a rel="license" href="http://creativecommons.org/licenses/by-nd/4.0/"
-                                           target="_blank"><img alt="CC-by-nd" style="border-width:0"
-                                                                src="https://i.creativecommons.org/l/by-nd/4.0/80x15.png"/></a><br>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>Src</td>
-                                    <td colspan="2"><a href="https://github.com/CrafterKina/SurviveInSociety"
-                                                       target="_blank"><i class="fa fa-github fa-1x"></i>GitHub</a></td>
-                                </tr>
+                                <tr><td>Minecraft Ver.</td><td colspan="2">1.8.0</td></tr>
+                                <tr><td>Require Mods</td><td colspan="2"><a href="https://files.minecraftforge.net/" target="_blank">Minecraft Forge</a></td></tr>
+                                <tr><td rowspan="2">License</td><td>Sources</td><td><a href="https://mozilla.org/MPL/2.0/" target="_blank">Mozilla Public License2.0</a>.</td>
+                                <tr><td>Images</td><td><a rel="license" href="http://creativecommons.org/licenses/by-nd/4.0/" target="_blank"><img alt="CC-by-nd" style="border-width:0" src="https://i.creativecommons.org/l/by-nd/4.0/80x15.png"/></a><br></td></tr>
+                                <tr><td>Status</td><td colspan="2">Pre Alpha</td></tr>
+                                <tr><td>Src</td><td colspan="2"><a href="https://github.com/CrafterKina/SurviveInSociety"target="_blank"><i class="fa fa-github fa-1x"></i>GitHub</a></td></tr>
                                 </tbody>
                             </table>
                         </div>
